--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,6 +18,10 @@
   <string name="ADD_SHARE">Compartir</string>
   <string name="ADD_SUCC_1">Felicitaciones, ha añadido correctamente!</string>
   <string name="AGREE">He leído y acepto los:</string>
+  <string name="AI_CAT">Gato</string>
+  <string name="AI_DOG">Perro</string>
+  <string name="AI_HUMAN">Humano</string>
+  <string name="AI_VEHICLE">Vehículo</string>
   <string name="ALARM">Alarma</string>
   <string name="ALERTS">Alarma</string>
   <string name="ALIAS">Sobrenombre</string>
@@ -41,7 +45,7 @@
   <string name="BIND_INFO">No se ha terminado el paso de añadir dispositivo. ¿Está seguro de renunciarlo?</string>
   <string name="BLE_SENSOR">Bluetooth</string>
   <string name="BLINKING">SÍ</string>
-  <string name="BLUE_BLINKING">Por favor, asegure que la luz azul de la señal de WIFI del dispositivo está parpadeando, si no, mantenga pulsando el botón de Wi&#8211;Fi durante tres segundos y espere hasta que la luz parpadee</string>
+  <string name="BLUE_BLINKING">Por favor, asegure que la luz azul de la señal de WIFI del dispositivo está parpadeando, si no, mantenga pulsando el botón de WiFi durante tres segundos y espere hasta que la luz parpadee</string>
   <string name="Button_Add">Añadir</string>
   <string name="Button_No">No</string>
   <string name="Button_ReObtain">Repetir</string>
@@ -93,6 +97,7 @@
   <string name="ClearingTips">Claro&#8230;</string>
   <string name="Cloud_Camera">Cámara de nubes</string>
   <string name="Consumer_Camera">Cámara del Consumidor</string>
+  <string name="DATA_FLOW_PHOTO">El consumo de datos se crearía si ver la foto original sin conexión WIFI, continúa?</string>
   <string name="DEAL_FEEDBACK">Gracias por sus comentarios</string>
   <string name="DELETE">Borrar</string>
   <string name="DELETED">Borradura hecha</string>
@@ -103,6 +108,7 @@
   <string name="DELETE_SURE">¿Está seguro de que quiere eliminar?</string>
   <string name="DELETE_THEME">Borrar localización</string>
   <string name="DELETE_THEME_XX">Seguro de borrar la %s ?</string>
+  <string name="DETECTED_AI">Detectado</string>
   <string name="DEVICE">Dispositivo</string>
   <string name="DEVICES_TIPS_TEXT">Se necesita en este paso:\n1. Dispositivo conectado a Internet \n2.Inscribir y activar CID \n3.Enlazado con la cuenta actual</string>
   <string name="DEVICES_TITLE">Añadir Dispositivos</string>
@@ -118,6 +124,13 @@
   <string name="DEVICE_CONNECTING">El dispositivo está conectado a la red</string>
   <string name="DEVICE_EXISTED">Este dispositivo ha a?adido</string>
   <string name="DEVICE_NO_RES">Añadir completa \n Ir a la lista Ver el estado del dispositivo</string>
+  <string name="DEVICE_OFFLINE1">Compruebe si el dispositivo está encendido</string>
+  <string name="DEVICE_OFFLINE2">El LED de alimentación del dispositivo siempre está después del arranque. Si el LED no se enciende, pulse el botón de encendido hasta que la luz azul parpadee.</string>
+  <string name="DEVICE_OFFLINE3">Compruebe la red circundante</string>
+  <string name="DEVICE_OFFLINE4">WiFi disponible</string>
+  <string name="DEVICE_OFFLINE5">Configure WiFi para el dispositivo</string>
+  <string name="DEVICE_OFFLINE6">No hay WiFi disponible</string>
+  <string name="DEVICE_OFFLINE7">Por favor, conecte los puntos calientes del equipo</string>
   <string name="DEVICE_UPGRADE">mejoras de equipo</string>
   <string name="DEVICE_UPGRADE_TIPS">El dispositivo debe ser de rebote para actualizar el software.</string>
   <string name="DEVICE_WIFI_ONLINE">WiFionline</string>
@@ -133,7 +146,7 @@
   <string name="DOOR_BIND">¡Enhorabuena! Ha logrado añadir \n se puede mantener enterando a todas horas de lo que pasa fuera de la pueta</string>
   <string name="DOOR_BLINKING">Luz roja</string>
   <string name="DOOR_BLUE_BLINKING">Azul claro</string>
-  <string name="DOOR_BLUE_BLINKING_EX">Cuando la luz no es \"sólido rojo\", por favor re&#8211;arranque, a continuación, pulse el botón Wi&#8211;Fi durante unos tres segundos después del lanzamiento, hasta el rojo sólido.</string>
+  <string name="DOOR_BLUE_BLINKING_EX">Cuando la luz no es \"sólido rojo\", por favor re&#8211;arranque, a continuación, pulse el botón WiFi durante unos tres segundos después del lanzamiento, hasta el rojo sólido.</string>
   <string name="DOOR_CALL">Se ha contestado</string>
   <string name="DOOR_CALL_RECORD">No hay récord de llamada</string>
   <string name="DOOR_CAMERA">Tomar fotos</string>
@@ -279,7 +292,7 @@
   <string name="LARGER_IMAGE">Haga click la pintura para agrandar</string>
   <string name="LAST_UPDATE">Última actualización</string>
   <string name="LED">Luces de señal LED</string>
-  <string name="LIGTH_DOOR_LABEL_0">La luz roja, la configuración Wi&#8211;Fi</string>
+  <string name="LIGTH_DOOR_LABEL_0">La luz roja, la configuración WiFi</string>
   <string name="LIGTH_DOOR_LABEL_1">Rojo parpadeante, Conectarse a la red</string>
   <string name="LIGTH_DOOR_LABEL_2">Parpadeo azul, llamando</string>
   <string name="LIGTH_DOOR_LABEL_3">La luz verde, esté cargando</string>
@@ -396,6 +409,9 @@
   <string name="PHONE_NUMBER_2">Introduzca número de teléfono válido por favor</string>
   <string name="PHONE_NUMBER_3">Se está usando este número de teléfono en la cuenta actual</string>
   <string name="PHONE_SIGNUP">Teléfono</string>
+  <string name="PHOTO_DELE_POP">Más allá de recuperar después de la eliminación, seguro de eliminar del fotos?</string>
+  <string name="PHOTO_DOWN_DELE">Se está descargando el archivo actual y no se restaurará después de eliminarlo, eliminarlo?</string>
+  <string name="PHOTO_NOT_LOAD">No se puede cargar la foto original</string>
   <string name="PLEASE_WAIT">Por favor, espere&#8230;</string>
   <string name="PLEASE_WAIT_1">Iniciando sesión&#8230;</string>
   <string name="PLEASE_WAIT_2">Añadir, por favor espere&#8230;</string>
@@ -501,6 +517,8 @@
   <string name="SAT_Hisvideo_Timeselector">Sáb</string>
   <string name="SAVE">Guardar</string>
   <string name="SAVED_PHOTOS">Guardado en álbum</string>
+  <string name="SAVE_PHONE">Guardar en el teléfono</string>
+  <string name="SAVE_SUCCESS">Guardado exitosamente</string>
   <string name="SCENE_ADDED">\"%s\" añadidura hecha</string>
   <string name="SCENE_ADD_ERR">\"%s\" añadidura fracasada</string>
   <string name="SCENE_SAVED">Ajuste hecho</string>
@@ -540,6 +558,7 @@
   <string name="SETTING_FREE">Ajuste de la alarma y la detección del movimiento de cada dispositivo individual como quiera</string>
   <string name="SETTING_RECORD">Ajustes de video</string>
   <string name="SETTING_SD">Tarjeta Micro SD</string>
+  <string name="SETTING_SECURE_AI">Reconocimiento de AI</string>
   <string name="SETTING_TIMEZONE">Zona horaria</string>
   <string name="SET_NEW_PWD">Crear nueva contraseña</string>
   <string name="SET_PHOTO_FAIL">Ajuste de perfil fracasado</string>
@@ -548,6 +567,7 @@
   <string name="SET_PWD">Establecer una contraseña</string>
   <string name="SHARE">Compartir</string>
   <string name="SHARE_ACCOUNT">Cuenta</string>
+  <string name="SHARE_DOWNLOAD">Por favor, descargue la foto original y luego comparta</string>
   <string name="SHARE_ERR">Sólo se puede compartir con 5 amigos</string>
   <string name="SHARE_E_MAIL">E&#8211;mail</string>
   <string name="SHARE_FROM">Compartido desde %s</string>
@@ -647,22 +667,22 @@
   <string name="Tap0_register_VerificationTips">El correo de activación se ha enviado a %s, haz clic en el enlace para activar tu cuenta.</string>
   <string name="Tap0_wrongcode">Código de verificación incorrecto</string>
   <string name="Tap1_AddDeviceTips">Haga clic en\"+\"para agregar dispositivo(s).</string>
-  <string name="Tap1_AddDevice_CameraTipShort">pulsado el botón Wi&#8211;Fi para 1s</string>
+  <string name="Tap1_AddDevice_CameraTipShort">Después de encender, presione la tecla WiFi</string>
   <string name="Tap1_AddDevice_CameraTips">Espere a que el indicador parpadee en azul</string>
-  <string name="Tap1_AddDevice_CameraTipsTitle">pulsado el botón Wi&#8211;Fi para 3s</string>
+  <string name="Tap1_AddDevice_CameraTipsTitle">pulsado el botón WiFi para 3s</string>
   <string name="Tap1_AddDevice_CloudcameraTips">Espere a que el indicador se mantenga en azul</string>
   <string name="Tap1_AddDevice_CloudcameraTitle">Después de arrancar y presionar el botón WiFi durante 3s</string>
-  <string name="Tap1_AddDevice_ConnectWifi">Conectar a la red Wi&#8211;Fi.</string>
+  <string name="Tap1_AddDevice_ConnectWifi">Conectar a la red WiFi.</string>
   <string name="Tap1_AddDevice_DoorbellTips">Espere a que el indicador a tener en rojo</string>
-  <string name="Tap1_AddDevice_DoorbellTipsTitle">Reiniciar y mantenga pulsado el botón Wi&#8211;Fi para 3s</string>
+  <string name="Tap1_AddDevice_DoorbellTipsTitle">Reiniciar y mantenga pulsado el botón WiFi para 3s</string>
   <string name="Tap1_AddDevice_FindNoResult">No ha encontrado el dispositivo, inténtelo de nuevo.</string>
   <string name="Tap1_AddDevice_FindingTips">Buscando los dispositivos , active el modo de configuración de WiFi.</string>
   <string name="Tap1_AddDevice_QR">Escanear código QR</string>
   <string name="Tap1_AddDevice_QR_Fail">Imposible de agregar dispositivo</string>
   <string name="Tap1_AddDevice_SetName">Nombre del dispositivo</string>
-  <string name="Tap1_AddDevice_TipsE">Falló la conexión con la red, pueden ser resultante de la introducción de la contraseña de Wi&#8211;Fi incorrecta. Tenga cuidado con las mayúsculas y minúsculas.</string>
+  <string name="Tap1_AddDevice_TipsE">Falló la conexión con la red, pueden ser resultante de la introducción de la contraseña de WiFi incorrecta. Tenga cuidado con las mayúsculas y minúsculas.</string>
   <string name="Tap1_AddDevice_ToSetting">Instaurar</string>
-  <string name="Tap1_AddDevice_WifiConfTips">Seleccione Wi&#8211;Fi</string>
+  <string name="Tap1_AddDevice_WifiConfTips">Seleccione WiFi</string>
   <string name="Tap1_AddDevice_disconnected">Desconectado, por favor, añadir el dispositivo nuevo.</string>
   <string name="Tap1_AddDevice_openlocationservice">activar los servicios de ubicación insetting</string>
   <string name="Tap1_AddDevice_refreshWifi">No se encontró el dispositivo, intente actualizar la lista de WiFi.</string>
@@ -677,7 +697,7 @@
   <string name="Tap1_Album_PutInVR">Ponga el teléfono celular en las gafas VR</string>
   <string name="Tap1_Album_Share_Description">Agregar descripción</string>
   <string name="Tap1_Album_Share_NotInstalledTips">\"%s\" no está instalado, instálelo y vuelva a intentarlo</string>
-  <string name="Tap1_Album_Share_To_Daily_Great">El contenido compartido se guarda en\"Gran día \"</string>
+  <string name="Tap1_Album_Share_To_Daily_Great">El contenido compartido se guarda en\"Me > compartir la gestión > 720°Cam Contenido compartidos \"</string>
   <string name="Tap1_BigPic_FavoriteTips">Las imágenes se mostrarán en la sección de\"Día estupendo\"</string>
   <string name="Tap1_CameraFun_Standby">En espera</string>
   <string name="Tap1_CameraFun_Standby_Description">Al activar el modo de espera, no permitirá ejercer las funciones de ver video en directo, videos anteriores, protección de seguridad y alarma, gradación automática, fotografía a intervalos, etc..</string>
@@ -761,7 +781,7 @@
   <string name="Tap1_FirmwareUpdateSuc">Actualizar correctamente</string>
   <string name="Tap1_FirmwareUpdating">Actualizando(%s)</string>
   <string name="Tap1_Firmware_DataTips">El consumo de datos se crearía si continúa sin conexión WIFI,continúa?</string>
-  <string name="Tap1_HomeMode">Hogar modo</string>
+  <string name="Tap1_HomeMode">WIFI modo</string>
   <string name="Tap1_HomeMode_Opened">Modo de casa ha sido abierto</string>
   <string name="Tap1_Index_DayGreetings">Un poquito de esperanza para mi a diario.</string>
   <string name="Tap1_Index_NightGreetings">Comience de nuevo</string>
@@ -937,7 +957,7 @@
   <string name="Tips_Device_TimeoutRetry">De tiempo de espera, intente de nuevo</string>
   <string name="Tips_ShortVideo">Pulsado para grabar un vídeo de corta duración</string>
   <string name="Tips_SureDelete">Asegúrese de eliminar?</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
+  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
   <string name="UPDATE_DISCONNECT">Ausrüstung keine Antwort, versuchen Sie es erneut</string>
   <string name="UPDATE_FAIL">Conexión del dispositivo fallido, por favor, inténtalo de nuevo</string>
   <string name="UPDATING_BUTTON">Renovando</string>
@@ -948,7 +968,7 @@
   <string name="USER_HELP">Guía</string>
   <string name="USER_NAME">Introduzca el mote</string>
   <string name="USE_HELP">Ayuda</string>
-  <string name="Unconnect_Network">Su dispositivo no está conectado a una red móvil oa una red Wi&#8211;Fi</string>
+  <string name="Unconnect_Network">Su dispositivo no está conectado a una red móvil oa una red WiFi</string>
   <string name="VALID_STORAGE">Almacenamiento disponible</string>
   <string name="VIDEO_FirmwareUpdating">Actualización de firmware&#8230;</string>
   <string name="VIDEO_REFRESHING">Cargando, espere un momento</string>
@@ -971,14 +991,14 @@
   <string name="WIFI_ERR_TIMEOUT">\"%s\" Conexión fracasada, se aconseja iniciar de nuevo el router</string>
   <string name="WIFI_HINT">Indicador LED de estado</string>
   <string name="WIFI_HINT_LAGEL">Nota:Productos de la serie de Wifi no contienen 3G luz de señal</string>
-  <string name="WIFI_HINT_LAGEL_0">Luz de Wi&#8211;Fi</string>
+  <string name="WIFI_HINT_LAGEL_0">Luz de WiFi</string>
   <string name="WIFI_HINT_LAGEL_1">Luz 3G/4G</string>
   <string name="WIFI_HINT_LAGEL_2">Luz de potencia</string>
   <string name="WIFI_NAME">WiFi:</string>
   <string name="WIFI_OFF">WiFi no conectado en este teléfono, inténtelo de nuevo al conectar con el Internet</string>
   <string name="WIFI_PWD">Contraseña</string>
   <string name="WIFI_PWD_1">Contraseña:</string>
-  <string name="WIFI_SET_2">1.Por favor, asegure que la luz azul de la señal de WIFI del dispositivo está parpadeando, si no, mantenga pulsando el botón de Wi&#8211;Fi durante tres segundos.\n2.Por favor, busque en la Configuración del iPhone &#8211; Wireless LAN, seleccione \"%s\" conexión,Contraseña ocho 1</string>
+  <string name="WIFI_SET_2">1.Por favor, asegure que la luz azul de la señal de WIFI del dispositivo está parpadeando, si no, mantenga pulsando el botón de WiFi durante tres segundos.\n2.Por favor, busque en la Configuración del iPhone &#8211; Wireless LAN, seleccione \"%s\" conexión,Contraseña ocho 1</string>
   <string name="WIFI_SET_3">Ajustes de phone &#8211;>Red de área local inalámbrica,elija DOG&#8211;****** entre, si necesitan contraseña, introduzca 11111111</string>
   <string name="WIFI_SET_3_1">Ajustes de phone &#8211;>Red de área local inalámbrica,elija DOG&#8211;ML****** entre,si necesitan contraseña, introduzca 11111111</string>
   <string name="WIFI_SET_4">lver a %s</string>
@@ -993,8 +1013,8 @@
   <string name="WiFiLight_RedFlashing">Rojo intermitente: Conexión</string>
   <string name="WiFiLight_RedNBlueFlashing">Parpadeo rojo y azul: Actualización</string>
   <string name="WiFiLight_SteadyBlue">Azul constante: WiFi en línea</string>
-  <string name="Wifi_Hotspot">En el dispositivo [Configuración> LAN inalámbrica], elija un punto de acceso Wi&#8211;Fi para conectarse.</string>
-  <string name="Wifi_Method">Wi&#8211;Fi:</string>
+  <string name="Wifi_Hotspot">En el dispositivo [Configuración> LAN inalámbrica], elija un punto de acceso WiFi para conectarse.</string>
+  <string name="Wifi_Method">WiFi:</string>
   <string name="Wifi_Set_Up">Ir a configurar</string>
   <string name="Word_Hours">Hora</string>
   <string name="XX_DISCOVERY">\"%s\" Entidad moviendo</string>
@@ -1016,7 +1036,7 @@
   <string name="contacts_auth">Contactos</string>
   <string name="copy">Copiar</string>
   <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
-  <string name="device_Wi_Fi">Wi&#8211;Fi</string>
+  <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s\nEs el número de teléfono, puedes:</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
   <string name="find_new_version">Qué guay, sistema actualizado de nuevo</string>
@@ -1034,7 +1054,7 @@
   <string name="not_found_the_album_application">Album application not found</string>
   <string name="pb_request">Por favor, espere</string>
   <string name="permission_auth">Por favor, activa el permiso \"%s\" en la configuración del sistema Android, que le permite utilizar la normalidad</string>
-  <string name="photo">Foto</string>
+  <string name="photo">Fotos</string>
   <string name="please_choose_wifi">Introduzca el nombre de Wifi</string>
   <string name="receive_new_news">Recibió %s mensajes nuevos</string>
   <string name="rename">Introduzca el nombre del dispositivo</string>
