--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -18,6 +18,10 @@
   <string name="ADD_SHARE">シェアを追加</string>
   <string name="ADD_SUCC_1">おめでとうございます。追加完了しました。</string>
   <string name="AGREE">同意します:</string>
+  <string name="AI_CAT">ネコ</string>
+  <string name="AI_DOG">犬</string>
+  <string name="AI_HUMAN">人間</string>
+  <string name="AI_VEHICLE">車両</string>
   <string name="ALARM">警報</string>
   <string name="ALERTS">警報</string>
   <string name="ALIAS">ニックネーム</string>
@@ -93,6 +97,7 @@
   <string name="ClearingTips">クリア&#8230;</string>
   <string name="Cloud_Camera">クラウドカメラ</string>
   <string name="Consumer_Camera">消費者のカメラ</string>
+  <string name="DATA_FLOW_PHOTO">WIFI接続せずに元の写真を表示するとデータ消費が発生しますか？</string>
   <string name="DEAL_FEEDBACK">フィードバックありがとうございます</string>
   <string name="DELETE">削除</string>
   <string name="DELETED">すべてを削除しました!</string>
@@ -103,6 +108,7 @@
   <string name="DELETE_SURE">本当に削除しますか?</string>
   <string name="DELETE_THEME">位置削除</string>
   <string name="DELETE_THEME_XX">位置%sを削除しますか？</string>
+  <string name="DETECTED_AI">検出された</string>
   <string name="DEVICE">デバイス</string>
   <string name="DEVICES_TIPS_TEXT">ここに必要のステップは:\n1.デバイスをネットワークに接続させる\n2. CIDアカウントを登録して有効化する\n3.現在のアカウントとバインディングする</string>
   <string name="DEVICES_TITLE">デバイス追加</string>
@@ -118,6 +124,13 @@
   <string name="DEVICE_CONNECTING">デバイスがネットワークに接続中</string>
   <string name="DEVICE_EXISTED">このアカウントはデバイスにバインディングされています</string>
   <string name="DEVICE_NO_RES">デバイスに反応がありません。リストに戻りご確認ください</string>
+  <string name="DEVICE_OFFLINE1">デバイスの電源が入っているかどうかを確認してください</string>
+  <string name="DEVICE_OFFLINE2">デバイス電源LEDは、常にブート後に点灯します。 LEDが点灯しない場合は、青色のライトが点滅するまで電源ボタンを押してください。</string>
+  <string name="DEVICE_OFFLINE3">周囲のネットワークを確認してください</string>
+  <string name="DEVICE_OFFLINE4">利用可能なWiFi</string>
+  <string name="DEVICE_OFFLINE5">デバイスにWiFiを設定してください</string>
+  <string name="DEVICE_OFFLINE6">WiFiなし</string>
+  <string name="DEVICE_OFFLINE7">機器のホットスポットを接続してください</string>
   <string name="DEVICE_UPGRADE">ソフトウェアアップグレード</string>
   <string name="DEVICE_UPGRADE_TIPS">デバイスは、ソフトウェアを更新するために反発する必要があります。</string>
   <string name="DEVICE_WIFI_ONLINE">WiFiオンライン</string>
@@ -396,6 +409,9 @@
   <string name="PHONE_NUMBER_2">有効な携帯電話番号を入力してください</string>
   <string name="PHONE_NUMBER_3">現在のアカウントはこちらの携帯電話番号を使用しています</string>
   <string name="PHONE_SIGNUP">電話</string>
+  <string name="PHOTO_DELE_POP">削除後に取得する以外に、確実にアルバムから削除しますか？</string>
+  <string name="PHOTO_DOWN_DELE">現在のファイルがダウンロードされており、削除後に復元されません。削除しますか？</string>
+  <string name="PHOTO_NOT_LOAD">元の写真を読み込めません</string>
   <string name="PLEASE_WAIT">しばらくお待ちください&#8230;</string>
   <string name="PLEASE_WAIT_1">ログイン中、お待ちください&#8230;</string>
   <string name="PLEASE_WAIT_2">\nを追加中、約1分間かかりますので、しばらくお待ちください&#8230;</string>
@@ -501,6 +517,8 @@
   <string name="SAT_Hisvideo_Timeselector">土</string>
   <string name="SAVE">セーブ</string>
   <string name="SAVED_PHOTOS">アルバムに保存しました</string>
+  <string name="SAVE_PHONE">電話で保存する</string>
+  <string name="SAVE_SUCCESS">正常に保存</string>
   <string name="SCENE_ADDED">\"%s\"追加しました</string>
   <string name="SCENE_ADD_ERR">\"%s\"追加できませんでした</string>
   <string name="SCENE_SAVED">設定完了</string>
@@ -540,6 +558,7 @@
   <string name="SETTING_FREE">デバイスの移動検出および警報を自由にカスタマイズする</string>
   <string name="SETTING_RECORD">ビデオ設定</string>
   <string name="SETTING_SD">Micro SDカード</string>
+  <string name="SETTING_SECURE_AI">AI認識</string>
   <string name="SETTING_TIMEZONE">デバイスタイムゾーン</string>
   <string name="SET_NEW_PWD">新しいパスワードを設定する</string>
   <string name="SET_PHOTO_FAIL">アイコンの設定ができませんでした</string>
@@ -548,6 +567,7 @@
   <string name="SET_PWD">パスワードを設定する</string>
   <string name="SHARE">シェアする</string>
   <string name="SHARE_ACCOUNT">相手のアカウント</string>
+  <string name="SHARE_DOWNLOAD">元の写真をダウンロードして共有してください</string>
   <string name="SHARE_ERR">5名の知り合いまでシェアできます</string>
   <string name="SHARE_E_MAIL">相手のメールアドレス</string>
   <string name="SHARE_FROM">%sからのシェア</string>
@@ -647,25 +667,25 @@
   <string name="Tap0_register_VerificationTips">アクティベーションメールが%sに送信されました。リンクをクリックしてアカウントを有効にしてください。</string>
   <string name="Tap0_wrongcode">確認コードが間違いました</string>
   <string name="Tap1_AddDeviceTips">右上の「＋」をクリックし、デバイスを追加しましょう</string>
-  <string name="Tap1_AddDevice_CameraTipShort">短押し1秒のためのWiFiボタン</string>
+  <string name="Tap1_AddDevice_CameraTipShort">電源を入れた後、WiFiキーを押します</string>
   <string name="Tap1_AddDevice_CameraTips">インジケータが青色で点滅されるまで待ち</string>
   <string name="Tap1_AddDevice_CameraTipsTitle">長押し3秒のためのWiFiボタン</string>
   <string name="Tap1_AddDevice_CloudcameraTips">インジケーターが青色になるのを待ちます</string>
   <string name="Tap1_AddDevice_CloudcameraTitle">起動後、WiFiボタンを長押しして3秒間</string>
-  <string name="Tap1_AddDevice_ConnectWifi">WI&#8211;FIネットワークを接続します</string>
+  <string name="Tap1_AddDevice_ConnectWifi">WiFiネットワークを接続します</string>
   <string name="Tap1_AddDevice_DoorbellTips">表示が赤色に維持するのを待ち</string>
   <string name="Tap1_AddDevice_DoorbellTipsTitle">3Sのため再起動して、長押しのWiFiボタン</string>
   <string name="Tap1_AddDevice_FindNoResult">設備が見つかりませんでした、もう一度お試しください</string>
-  <string name="Tap1_AddDevice_FindingTips">ただいまお近くのデバイスを検索しています。デバイスのWI&#8211;FI設定をオンにしてください</string>
+  <string name="Tap1_AddDevice_FindingTips">ただいまお近くのデバイスを検索しています。デバイスのWiFi設定をオンにしてください</string>
   <string name="Tap1_AddDevice_QR">QRコードのスキャン</string>
   <string name="Tap1_AddDevice_QR_Fail">このデバイスはスキャン機能で追加されることができません</string>
   <string name="Tap1_AddDevice_SetName">デバイスに名前を付けましょう</string>
-  <string name="Tap1_AddDevice_TipsE">デバイスのインターネット接続が失敗しました、WI&#8211;FIパスワードを間違えないように大文字と小文字を区別してください。</string>
+  <string name="Tap1_AddDevice_TipsE">デバイスのインターネット接続が失敗しました、WiFiパスワードを間違えないように大文字と小文字を区別してください。</string>
   <string name="Tap1_AddDevice_ToSetting">設定へ</string>
   <string name="Tap1_AddDevice_WifiConfTips">カメラの接続するWIFIをお選びください</string>
   <string name="Tap1_AddDevice_disconnected">インターネットの接続は失敗しました。もう一回設定してください。</string>
   <string name="Tap1_AddDevice_openlocationservice">位置情報サービスをオンにします</string>
-  <string name="Tap1_AddDevice_refreshWifi">デバイスを見つかりませんでした。WI&#8211;FIリストを最新表示しますか。</string>
+  <string name="Tap1_AddDevice_refreshWifi">デバイスを見つかりませんでした。WiFiリストを最新表示しますか。</string>
   <string name="Tap1_AddDevice_tips">デバイスの設定を諦めますか。</string>
   <string name="Tap1_Add_Tips">デバイスを追加するにはここをクリック</string>
   <string name="Tap1_AddedDeviceTips">IDはすでにデバイスと連動しています</string>
@@ -677,7 +697,7 @@
   <string name="Tap1_Album_PutInVR">携帯電話をVRメガネに入れる</string>
   <string name="Tap1_Album_Share_Description">説明を追加</string>
   <string name="Tap1_Album_Share_NotInstalledTips">“%s”がインストールされていない、それをインストールして、再度お試しください</string>
-  <string name="Tap1_Album_Share_To_Daily_Great">共有コンテンツは、\"毎日の見どころ\" に保存されます</string>
+  <string name="Tap1_Album_Share_To_Daily_Great">共有コンテンツは、\"本人 > 共有管理 > 720°Cam 共有コンテンツ \" に保存されます</string>
   <string name="Tap1_BigPic_FavoriteTips">収集した画像は「毎日の見どころ」にあります</string>
   <string name="Tap1_CameraFun_Standby">待機</string>
   <string name="Tap1_CameraFun_Standby_Description">待機機能を作動するとデバイスは一時休止状態に入ります。生放送、ビデオ、安全防犯、アラーム、自動録画及び遅延撮影の機能が使えなくなります。</string>
@@ -937,7 +957,7 @@
   <string name="Tips_Device_TimeoutRetry">タイムアウト、再試行してください</string>
   <string name="Tips_ShortVideo">長押しして短いビデオを録画する</string>
   <string name="Tips_SureDelete">必ず削除して？</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
+  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
   <string name="UPDATE_DISCONNECT">デバイスに反応がありません。再試行してください</string>
   <string name="UPDATE_FAIL">デバイスの接続に失敗しました、再試行してください</string>
   <string name="UPDATING_BUTTON">アップグレード中</string>
@@ -948,7 +968,7 @@
   <string name="USER_HELP">マニュアル</string>
   <string name="USER_NAME">ニックネームを入力してください</string>
   <string name="USE_HELP">ヘルプ</string>
-  <string name="Unconnect_Network">お使いの端末はモバイルネットワークまたはWi&#8211;Fiネットワークに接続されていません</string>
+  <string name="Unconnect_Network">お使いの端末はモバイルネットワークまたはWiFiネットワークに接続されていません</string>
   <string name="VALID_STORAGE">ストレージ容量</string>
   <string name="VIDEO_FirmwareUpdating">ファームウェアのアップデート&#8230;</string>
   <string name="VIDEO_REFRESHING">アップロード中、お待ちください</string>
@@ -978,11 +998,11 @@
   <string name="WIFI_OFF">携帯電話のWiFi設定がオンになっていません、オンにした後再試行してください！</string>
   <string name="WIFI_PWD">パスワード</string>
   <string name="WIFI_PWD_1">パスワード：</string>
-  <string name="WIFI_SET_2">1. デバイスのWi&#8211;Fiランプが青く点滅しているかどうかチェックしてください。点滅していない場合、点滅するまでWiFiキーを約3秒間長押ししてください\n2.iPhoneの設定> WiFiを開き、\"%s\"WiFiを選択し、追加してください,パスワード11111111</string>
+  <string name="WIFI_SET_2">1. デバイスのWiFiランプが青く点滅しているかどうかチェックしてください。点滅していない場合、点滅するまでWiFiキーを約3秒間長押ししてください\n2.iPhoneの設定> WiFiを開き、\"%s\"WiFiを選択し、追加してください,パスワード11111111</string>
   <string name="WIFI_SET_3">システム設定&#8211;>WiFiにDOG&#8211;**&#8211;******を選択し追加してください,パスワード11111111</string>
   <string name="WIFI_SET_3_1">システム設定&#8211;> WiFiにDOG&#8211;ML &#8211;******を選択し追加してください,パスワード11111111</string>
   <string name="WIFI_SET_4">戻る%s</string>
-  <string name="WIFI_SET_5GTIPS">注意：ただいま5GHz式のWi&#8211;Fi電波が適用されません</string>
+  <string name="WIFI_SET_5GTIPS">注意：ただいま5GHz式のWiFi電波が適用されません</string>
   <string name="WIFI_SET_RS">システム設定&#8211;> WiFiにRS&#8211;CAM &#8211;******を選択し追加してください,パスワード11111111</string>
   <string name="WIFI_SET_VER">システム設定&#8211;> WiFiに %s を選択し追加してください,パスワード11111111</string>
   <string name="WONDER_TODAY_H_M">今日 HH:mm</string>
@@ -993,8 +1013,8 @@
   <string name="WiFiLight_RedFlashing">赤い点滅：接続中</string>
   <string name="WiFiLight_RedNBlueFlashing">赤と青の点滅：アップデート中</string>
   <string name="WiFiLight_SteadyBlue">青色の常時点灯：WiFiオンライン</string>
-  <string name="Wifi_Hotspot">[設定]> [無線LAN]のデバイスで、接続するWi&#8211;Fiホットスポットを選択してください。</string>
-  <string name="Wifi_Method">Wi&#8211;Fiネットワーク：</string>
+  <string name="Wifi_Hotspot">[設定]> [無線LAN]のデバイスで、接続するWiFiホットスポットを選択してください。</string>
+  <string name="Wifi_Method">WiFiネットワーク：</string>
   <string name="Wifi_Set_Up">セットアップに行く</string>
   <string name="Word_Hours">時間</string>
   <string name="XX_DISCOVERY">\"%s\"に移動する物体があります</string>
@@ -1016,7 +1036,7 @@
   <string name="contacts_auth">連絡帳</string>
   <string name="copy">复制</string>
   <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
-  <string name="device_Wi_Fi">Wi&#8211;Fi</string>
+  <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s\nは、電話番号であってもよいし、次のことができます：</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
   <string name="find_new_version">アップデートのお知らせ。お早めにアップデートしてください。</string>
