--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -18,6 +18,10 @@
   <string name="ADD_SHARE">Chia sẻ</string>
   <string name="ADD_SUCC_1">Thêm thành công \n</string>
   <string name="AGREE">Đã đọc và đồng ý</string>
+  <string name="AI_CAT">Con mèo</string>
+  <string name="AI_DOG">Chó</string>
+  <string name="AI_HUMAN">Nhân loại</string>
+  <string name="AI_VEHICLE">Xe</string>
   <string name="ALARM">Báo động</string>
   <string name="ALERTS">Báo động</string>
   <string name="ALIAS">Tên</string>
@@ -41,7 +45,7 @@
   <string name="BIND_INFO">Đang thêm thiết bị, bạn muốn thoát?</string>
   <string name="BLE_SENSOR">Bluetooth</string>
   <string name="BLINKING">Đúng</string>
-  <string name="BLUE_BLINKING">Hãy kiểm tra đèn Wi&#8211;Fi đang nhấp nháy xanh chưa. Nếu chưa, hãy nhấn nút Wi&#8211;FI 3 giây</string>
+  <string name="BLUE_BLINKING">Hãy kiểm tra đèn WiFi đang nhấp nháy xanh chưa. Nếu chưa, hãy nhấn nút WiFi 3 giây</string>
   <string name="Button_Add">Thêm vào</string>
   <string name="Button_No">Không</string>
   <string name="Button_ReObtain">Gửi lại</string>
@@ -93,6 +97,7 @@
   <string name="ClearingTips">Clearing&#8230;</string>
   <string name="Cloud_Camera">Máy ảnh Đám mây</string>
   <string name="Consumer_Camera">Máy ảnh người tiêu dùng</string>
+  <string name="DATA_FLOW_PHOTO">Tiêu thụ dữ liệu sẽ được tạo ra nếu xem ảnh gốc mà không có kết nối WIFI, tiếp tục?</string>
   <string name="DEAL_FEEDBACK">Cảm ơn đóng góp ý kiến</string>
   <string name="DELETE">Xoá</string>
   <string name="DELETED">Đã xoá</string>
@@ -103,12 +108,13 @@
   <string name="DELETE_SURE">Bạn muốn xoá?</string>
   <string name="DELETE_THEME">Xoá</string>
   <string name="DELETE_THEME_XX">Bạn muốn xoá %s ?</string>
+  <string name="DETECTED_AI">Phát hiện</string>
   <string name="DEVICE">Thiết bị</string>
   <string name="DEVICES_TIPS_TEXT">Quá trình:\n1. Thiết bị kết nối Internet \n2.Đăng ký kích hoạt CID \n3. Gắn vào tài khoản</string>
   <string name="DEVICES_TITLE">Thêm thiết bị</string>
   <string name="DEVICES_TITLE_1">Kết nối thiết bị</string>
   <string name="DEVICES_TITLE_2">Tìm thiết bi</string>
-  <string name="DEVICES_TITLE_3">Cài Wi&#8211;Fi</string>
+  <string name="DEVICES_TITLE_3">Cài WiFi</string>
   <string name="DEVICES_TITLE_4">Thêm</string>
   <string name="DEVICE_2G_ONLINE">2G&#8211;Online</string>
   <string name="DEVICE_3G_ONLINE">3G&#8211;Online</string>
@@ -118,6 +124,13 @@
   <string name="DEVICE_CONNECTING">Thiết bị đang kết nối Internet</string>
   <string name="DEVICE_EXISTED">Thiết bị đã thêm vào</string>
   <string name="DEVICE_NO_RES">Thêm thành công \n Đến danh sách thiết bị</string>
+  <string name="DEVICE_OFFLINE1">Hãy kiểm tra xem thiết bị có được bật không</string>
+  <string name="DEVICE_OFFLINE2">Đèn LED thiết bị luôn ở trạng thái khởi động. Nếu đèn LED không sáng, hãy bấm nút nguồn cho đến khi đèn xanh nhấp nháy.</string>
+  <string name="DEVICE_OFFLINE3">Vui lòng kiểm tra mạng lưới xung quanh</string>
+  <string name="DEVICE_OFFLINE4">Có sẵn WiFi</string>
+  <string name="DEVICE_OFFLINE5">Vui lòng định cấu hình WiFi cho thiết bị</string>
+  <string name="DEVICE_OFFLINE6">Không có sẵn WiFi</string>
+  <string name="DEVICE_OFFLINE7">Vui lòng kết nối thiết bị điểm nóng</string>
   <string name="DEVICE_UPGRADE">Nâng cấp thiết bị</string>
   <string name="DEVICE_UPGRADE_TIPS">Các thiết bị cần phải được bật để cập nhật phần mềm.</string>
   <string name="DEVICE_WIFI_ONLINE">WiFi&#8211;Online</string>
@@ -133,7 +146,7 @@
   <string name="DOOR_BIND">Thêm thành công \n</string>
   <string name="DOOR_BLINKING">Đèn đỏ</string>
   <string name="DOOR_BLUE_BLINKING">Xanh nhạt</string>
-  <string name="DOOR_BLUE_BLINKING_EX">Đèn báo cần phải là màu đỏ, nếu chưa, hãy khởi động lại thiết bị, sau đó giữ nút Wi&#8211;Fi trong 3 giây và đợi chuyển sang đỏ</string>
+  <string name="DOOR_BLUE_BLINKING_EX">Đèn báo cần phải là màu đỏ, nếu chưa, hãy khởi động lại thiết bị, sau đó giữ nút WiFi trong 3 giây và đợi chuyển sang đỏ</string>
   <string name="DOOR_CALL">Đang gọi</string>
   <string name="DOOR_CALL_RECORD">Không có nhật ký cuộc gọi</string>
   <string name="DOOR_CAMERA">Hình</string>
@@ -279,12 +292,12 @@
   <string name="LARGER_IMAGE">Xem ảnh kích thước lớn</string>
   <string name="LAST_UPDATE">Lận cập nhật cuối</string>
   <string name="LED">Đèn báo thiết bị</string>
-  <string name="LIGTH_DOOR_LABEL_0">Đèn đỏ, đang kết nối Wi&#8211;Fi</string>
+  <string name="LIGTH_DOOR_LABEL_0">Đèn đỏ, đang kết nối WiFi</string>
   <string name="LIGTH_DOOR_LABEL_1">Đèn đỏ chớp, đang kết nối mạng</string>
   <string name="LIGTH_DOOR_LABEL_2">Đèn xanh chớp, đang gọi</string>
   <string name="LIGTH_DOOR_LABEL_3">Đèn xanh lá ổn định, đang nạp điện</string>
-  <string name="LIGTH_LABEL_0_1">Đèn xanh chớp, cấu hình Wi&#8211;Fi</string>
-  <string name="LIGTH_LABEL_0_2">Đèn xenh ổn định, đang kết nối Wi&#8211;FI</string>
+  <string name="LIGTH_LABEL_0_1">Đèn xanh chớp, cấu hình WiFi</string>
+  <string name="LIGTH_LABEL_0_2">Đèn xenh ổn định, đang kết nối WiFi</string>
   <string name="LIGTH_LABEL_1_1">Đèn xanh chớp, đang kết nối mạng</string>
   <string name="LIGTH_LABEL_1_2">Đèn xanh ổn định, 3G/4G Online</string>
   <string name="LIGTH_LABEL_2_1">Nhấp nháy, pin yếu</string>
@@ -316,7 +329,7 @@
   <string name="MESSAGE">Tin nhắn</string>
   <string name="MINUTE">M</string>
   <string name="MOBILE_DATA">mạng dữ liệu di động</string>
-  <string name="MOBILE_TIPS">Khi bật tính năng này, thiết bị sẽ ưu tiên sử dụng sóng 3G/4G thay vì Wi&#8211;Fi</string>
+  <string name="MOBILE_TIPS">Khi bật tính năng này, thiết bị sẽ ưu tiên sử dụng sóng 3G/4G thay vì WiFi</string>
   <string name="MODEL">Model</string>
   <string name="MON">Thứ hai</string>
   <string name="MONTHS">tháng</string>
@@ -396,6 +409,9 @@
   <string name="PHONE_NUMBER_2">Số điện thoại không tồn tại</string>
   <string name="PHONE_NUMBER_3">Tài khoản đang dùng số điện thoại</string>
   <string name="PHONE_SIGNUP">Điện thoại</string>
+  <string name="PHOTO_DELE_POP">Ngoài lấy ra sau khi xóa, chắc chắn để xóa khỏi Ảnh?</string>
+  <string name="PHOTO_DOWN_DELE">Tệp hiện tại đang được tải xuống, và nó sẽ không được phục hồi sau khi xóa, xóa?</string>
+  <string name="PHOTO_NOT_LOAD">Không thể tải ảnh gốc</string>
   <string name="PLEASE_WAIT">Vui lòng đợi&#8230;</string>
   <string name="PLEASE_WAIT_1">Hãy đợi&#8230;</string>
   <string name="PLEASE_WAIT_2">Đang thêm, hãy đợi&#8230;</string>
@@ -501,6 +517,8 @@
   <string name="SAT_Hisvideo_Timeselector">Thứ bảy</string>
   <string name="SAVE">Hoàn thành</string>
   <string name="SAVED_PHOTOS">Lưu ảnh</string>
+  <string name="SAVE_PHONE">Lưu qua điện thoại</string>
+  <string name="SAVE_SUCCESS">đã lưu thành công</string>
   <string name="SCENE_ADDED">\"%s\" thêm thành công</string>
   <string name="SCENE_ADD_ERR">\"%s\" lỗi khi thêm</string>
   <string name="SCENE_SAVED">Lưu cài đặt</string>
@@ -540,6 +558,7 @@
   <string name="SETTING_FREE">Cài phát hiện chuyển động và báo động của thiết bị</string>
   <string name="SETTING_RECORD">Cài đặt video</string>
   <string name="SETTING_SD">Thẻ nhớ Micro SD</string>
+  <string name="SETTING_SECURE_AI">Nhận dạng AI</string>
   <string name="SETTING_TIMEZONE">Vùng thời gian</string>
   <string name="SET_NEW_PWD">Cài mật khẩu mới</string>
   <string name="SET_PHOTO_FAIL">Tải lỗi</string>
@@ -548,6 +567,7 @@
   <string name="SET_PWD">Mật khẩu</string>
   <string name="SHARE">Chia sẻ</string>
   <string name="SHARE_ACCOUNT">Email</string>
+  <string name="SHARE_DOWNLOAD">Vui lòng tải ảnh gốc và chia sẻ</string>
   <string name="SHARE_ERR">Chỉ chia sẻ được 5 người</string>
   <string name="SHARE_E_MAIL">Email</string>
   <string name="SHARE_FROM">Đã chia sẻ %s</string>
@@ -647,25 +667,25 @@
   <string name="Tap0_register_VerificationTips">Mail kích hoạt đã được gửi đến %s, xin vui lòng nhấp vào liên kết để kích hoạt tài khoản của bạn.</string>
   <string name="Tap0_wrongcode">Lỗi</string>
   <string name="Tap1_AddDeviceTips">Nhấn\"+\"để thêm thiết bị</string>
-  <string name="Tap1_AddDevice_CameraTipShort">Short nhấn nút WiFi cho 1s</string>
+  <string name="Tap1_AddDevice_CameraTipShort">Sau khi bật nguồn, bấm phím WiFi</string>
   <string name="Tap1_AddDevice_CameraTips">Chờ cho chỉ số nhấp nháy màu xanh lam</string>
   <string name="Tap1_AddDevice_CameraTipsTitle">Long nhấn nút WiFi cho 3s</string>
   <string name="Tap1_AddDevice_CloudcameraTips">Đợi cho chỉ thị giữ màu xanh</string>
   <string name="Tap1_AddDevice_CloudcameraTitle">Sau khi khởi động và nhấn nút WiFi cho 3 giây</string>
-  <string name="Tap1_AddDevice_ConnectWifi">Kết nối Wi&#8211;Fi</string>
+  <string name="Tap1_AddDevice_ConnectWifi">Kết nối WiFi</string>
   <string name="Tap1_AddDevice_DoorbellTips">Chờ cho chỉ số để giữ cho màu đỏ</string>
   <string name="Tap1_AddDevice_DoorbellTipsTitle">Khởi động lại và dài bấm nút WiFi cho 3s</string>
   <string name="Tap1_AddDevice_FindNoResult">Không thấy thiết bị, hãy thử lại</string>
-  <string name="Tap1_AddDevice_FindingTips">Tìm thêm thiết bị gần đó, khởi động chế độ cấu hình Wi&#8211;Fi</string>
+  <string name="Tap1_AddDevice_FindingTips">Tìm thêm thiết bị gần đó, khởi động chế độ cấu hình WiFi</string>
   <string name="Tap1_AddDevice_QR">Quét mã QR</string>
   <string name="Tap1_AddDevice_QR_Fail">Không thể thêm</string>
   <string name="Tap1_AddDevice_SetName">Chọn tên</string>
   <string name="Tap1_AddDevice_TipsE">Lỗi kết nối</string>
   <string name="Tap1_AddDevice_ToSetting">Thiết lập</string>
-  <string name="Tap1_AddDevice_WifiConfTips">Chọn Wi&#8211;Fi</string>
+  <string name="Tap1_AddDevice_WifiConfTips">Chọn WiFi</string>
   <string name="Tap1_AddDevice_disconnected">Ngắt kết nối, hãy làm lại</string>
   <string name="Tap1_AddDevice_openlocationservice">Bật tính năng Dịch vụ Khu Vực trong Cài Đặt</string>
-  <string name="Tap1_AddDevice_refreshWifi">Không thấy thiết bị, hãy làm mới danh sách Wi&#8211;Fi</string>
+  <string name="Tap1_AddDevice_refreshWifi">Không thấy thiết bị, hãy làm mới danh sách WiFi</string>
   <string name="Tap1_AddDevice_tips">Dừng cấu hình và thoát?</string>
   <string name="Tap1_Add_Tips">Click vào ở đây để thêm thiết bị</string>
   <string name="Tap1_AddedDeviceTips">Gắn với tài khoản hiện tại</string>
@@ -677,7 +697,7 @@
   <string name="Tap1_Album_PutInVR">Đặt điện thoại di động vào kính VR</string>
   <string name="Tap1_Album_Share_Description">Thêm mô tả</string>
   <string name="Tap1_Album_Share_NotInstalledTips">\"%s\" chưa được cài đặt, vui lòng cài đặt và thử lại</string>
-  <string name="Tap1_Album_Share_To_Daily_Great">Các nội dung được chia sẻ sẽ được lưu vào\"My Favorite \"</string>
+  <string name="Tap1_Album_Share_To_Daily_Great">Các nội dung được chia sẻ sẽ được lưu vào\" Tôi > Quản lý chia sẻ > 720°Cam Nội dung chia sẻ \"</string>
   <string name="Tap1_BigPic_FavoriteTips">Sưu tập hình trong mục \"My Favorite \"</string>
   <string name="Tap1_CameraFun_Standby">Standby</string>
   <string name="Tap1_CameraFun_Standby_Description">Từ Standby chuyển sang Hibernate sẽ không thể thực hiện hoạt động gì nữa</string>
@@ -937,7 +957,7 @@
   <string name="Tips_Device_TimeoutRetry">Timeout, hãy thử lại</string>
   <string name="Tips_ShortVideo">Bấm dài để ghi lại một đoạn video ngắn</string>
   <string name="Tips_SureDelete">Chắc chắn để delete?</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
+  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
   <string name="UPDATE_DISCONNECT">Không phản hồi, hãy thử lại</string>
   <string name="UPDATE_FAIL">Lỗi kết nối camera, hãy thử lại</string>
   <string name="UPDATING_BUTTON">Đang cập nhật</string>
@@ -948,7 +968,7 @@
   <string name="USER_HELP">FAQ</string>
   <string name="USER_NAME">Tên người dùng</string>
   <string name="USE_HELP">Trợ giúp</string>
-  <string name="Unconnect_Network">Thiết bị của bạn không được kết nối với mạng di động hoặc mạng Wi&#8211;Fi</string>
+  <string name="Unconnect_Network">Thiết bị của bạn không được kết nối với mạng di động hoặc mạng WiFi</string>
   <string name="VALID_STORAGE">Có bộ nhớ lưu trữ</string>
   <string name="VIDEO_FirmwareUpdating">Cập nhật firmware&#8230;</string>
   <string name="VIDEO_REFRESHING">ĐANG TẢI</string>
@@ -963,26 +983,26 @@
   <string name="WEEKDAYS">Ngày trong tuần</string>
   <string name="WEEKEND">Cuối tuần</string>
   <string name="WELL_OK">OK</string>
-  <string name="WIFI">Wi&#8211;Fi</string>
+  <string name="WIFI">WiFi</string>
   <string name="WIFI_CONN">%s</string>
   <string name="WIFI_ERR_AUTH">%s mật khẩu lỗi</string>
   <string name="WIFI_ERR_INFO">Lỗi kết nối</string>
   <string name="WIFI_ERR_NOTFOUND">Chưa tìm thấy %s</string>
   <string name="WIFI_ERR_TIMEOUT">\"%s\" kết nỗi quá hạn</string>
   <string name="WIFI_HINT">Trạng thái đèn LED</string>
-  <string name="WIFI_HINT_LAGEL">Dòng Wi&#8211;Fi không có đèn 3G</string>
-  <string name="WIFI_HINT_LAGEL_0">Đèn Wi&#8211;Fi</string>
+  <string name="WIFI_HINT_LAGEL">Dòng WiFi không có đèn 3G</string>
+  <string name="WIFI_HINT_LAGEL_0">Đèn WiFi</string>
   <string name="WIFI_HINT_LAGEL_1">Đèn 3G/4G</string>
   <string name="WIFI_HINT_LAGEL_2">Đèn nguồn</string>
-  <string name="WIFI_NAME">Wi&#8211;Fi:</string>
-  <string name="WIFI_OFF">Wi&#8211;Fi trên điện thoại đã tắt</string>
+  <string name="WIFI_NAME">WiFi:</string>
+  <string name="WIFI_OFF">WiFi trên điện thoại đã tắt</string>
   <string name="WIFI_PWD">Mật mã</string>
   <string name="WIFI_PWD_1">Mật mã:</string>
   <string name="WIFI_SET_2">1.Please đảm bảo các chỉ số WIFI là blinking.If xanh không, xin vui lòng nhấn vào nút WIFI 3 giây \ n2.Via \"Settings\" &#8211;.> \"WLAN\" trên iPhone của bạn, kết nối với \"%s\", mật khẩu 11111111</string>
   <string name="WIFI_SET_3">Trong mục \"Cài đặt\"&#8211;>\"WLAN\", chọn \"DOG&#8211;**&#8211;*****\" kết nối phone, Mật khẩu 11111111</string>
   <string name="WIFI_SET_3_1">Trong mục \"Cài đặt\"&#8211;>\"WLAN\", chọn \"DOG&#8211;ML&#8211;*****\" kết nối iPhone, Mật khẩu 11111111</string>
   <string name="WIFI_SET_4">Trở lại %s</string>
-  <string name="WIFI_SET_5GTIPS">Lưu ý:5G Wi&#8211;Fi chưa được bật</string>
+  <string name="WIFI_SET_5GTIPS">Lưu ý:5G WiFi chưa được bật</string>
   <string name="WIFI_SET_RS">Trong mục \"Cài đặt\"&#8211;>\"WLAN\", chọn \"RS&#8211;CAM&#8211;*****\" kết nối iPhone, Mật khẩu 11111111</string>
   <string name="WIFI_SET_VER">Trong mục \"Cài đặt\"&#8211;>\"WLAN\", chọn \"%s\" kết nối iPhone, Mật khẩu 11111111</string>
   <string name="WONDER_TODAY_H_M">Hôm nay HH:mm</string>
@@ -993,8 +1013,8 @@
   <string name="WiFiLight_RedFlashing">Đỏ nhấp nháy: Kết nối</string>
   <string name="WiFiLight_RedNBlueFlashing">Red &amp; Blue nhấp nháy: Đang cập nhật</string>
   <string name="WiFiLight_SteadyBlue">Ổn định màu xanh: WiFi trực tuyến</string>
-  <string name="Wifi_Hotspot">Trong thiết bị [Cài đặt> Mạng LAN không dây], Vui lòng chọn điểm truy cập Wi&#8211;Fi để kết nối.</string>
-  <string name="Wifi_Method">Wi&#8211;Fi Mạng:</string>
+  <string name="Wifi_Hotspot">Trong thiết bị [Cài đặt> Mạng LAN không dây], Vui lòng chọn điểm truy cập WiFi để kết nối.</string>
+  <string name="Wifi_Method">WiFi Mạng:</string>
   <string name="Wifi_Set_Up">Đi tới thiết lập</string>
   <string name="Word_Hours">giờ</string>
   <string name="XX_DISCOVERY">\"%s\" có khám phá mới</string>
@@ -1016,7 +1036,7 @@
   <string name="contacts_auth">Liên hệ</string>
   <string name="copy">Sao chép</string>
   <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
-  <string name="device_Wi_Fi">Wi&#8211;Fi</string>
+  <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s\nlà một số điện thoại, bạn có thể:</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
   <string name="find_new_version">Khám phá của phiên bản mới</string>
@@ -1035,7 +1055,7 @@
   <string name="pb_request">Đang tải</string>
   <string name="permission_auth">Hãy bật \"%s\" cho phép trong phần cài đặt của điện thoại để sử dụng</string>
   <string name="photo">Ảnh</string>
-  <string name="please_choose_wifi">Chọn Wi&#8211;Fi</string>
+  <string name="please_choose_wifi">Chọn WiFi</string>
   <string name="receive_new_news">Nhận %s tin nhắn</string>
   <string name="rename">Sửa tên</string>
   <string name="service_phonenum">84822101327</string>
@@ -1055,6 +1075,6 @@
   <string name="version_hint">V%s</string>
   <string name="warm_voice_length_values">1 giây|2 giây|3 giây|4 giây|5 giây|6 giây|7 giây|8 giây|9 giây|10 giây|11 giây|12 giây|13 giây|14 giây|15 giây</string>
   <string name="web">http://www.cleverdog.com.cn/</string>
-  <string name="wifi_authentication">Xác thực %s kết nối Wi&#8211;Fi</string>
-  <string name="wifi_hasnot">Wi&#8211;Fi không tìm thấy</string>
+  <string name="wifi_authentication">Xác thực %s kết nối WiFi</string>
+  <string name="wifi_hasnot">WiFi không tìm thấy</string>
 </resources>
