--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -18,6 +18,10 @@
   <string name="ADD_SHARE">增加分享</string>
   <string name="ADD_SUCC_1">恭喜你，新增成功！</string>
   <string name="AGREE">我已閱讀並同意：</string>
+  <string name="AI_CAT">貓</string>
+  <string name="AI_DOG">狗</string>
+  <string name="AI_HUMAN">人形</string>
+  <string name="AI_VEHICLE">車輛</string>
   <string name="ALARM">警示聲</string>
   <string name="ALERTS">警示聲</string>
   <string name="ALIAS">暱稱</string>
@@ -93,6 +97,7 @@
   <string name="ClearingTips">清除中&#8230;</string>
   <string name="Cloud_Camera">云攝像機</string>
   <string name="Consumer_Camera">消費類攝像機</string>
+  <string name="DATA_FLOW_PHOTO">當前使用非WiFi網絡，查看原圖將會產生流量，是否繼續？</string>
   <string name="DEAL_FEEDBACK">感謝您的回饋</string>
   <string name="DELETE">刪除</string>
   <string name="DELETED">已刪除</string>
@@ -103,6 +108,7 @@
   <string name="DELETE_SURE">確定要刪除嗎？</string>
   <string name="DELETE_THEME">刪除位置</string>
   <string name="DELETE_THEME_XX">確定刪除%s嗎？</string>
+  <string name="DETECTED_AI">檢測到</string>
   <string name="DEVICE">設備</string>
   <string name="DEVICES_TIPS_TEXT">將完成以下步驟:\n1.設備連接到網路\n2.註冊並啟動CID\n3.與當前帳號綁定</string>
   <string name="DEVICES_TITLE">新增設備</string>
@@ -118,6 +124,13 @@
   <string name="DEVICE_CONNECTING">設備正在連接網路</string>
   <string name="DEVICE_EXISTED">此帳號已設定為該設備</string>
   <string name="DEVICE_NO_RES">绑定完成\n請至列表查看設備狀態</string>
+  <string name="DEVICE_OFFLINE1">請檢查設備是否已開機</string>
+  <string name="DEVICE_OFFLINE2">設備電源燈常亮則開機，未常亮請長按開機鍵，直至藍燈常亮。</string>
+  <string name="DEVICE_OFFLINE3">請檢查周圍網絡</string>
+  <string name="DEVICE_OFFLINE4">有可用WiFi</string>
+  <string name="DEVICE_OFFLINE5">請給設備配置WiFi進行連接。</string>
+  <string name="DEVICE_OFFLINE6">無可用WiFi</string>
+  <string name="DEVICE_OFFLINE7">請直連設備熱點。</string>
   <string name="DEVICE_UPGRADE">設備軟體升級</string>
   <string name="DEVICE_UPGRADE_TIPS">設備軟體版本較低，請重新綁定​​設備進行升級</string>
   <string name="DEVICE_WIFI_ONLINE">WiFi已連線</string>
@@ -396,6 +409,9 @@
   <string name="PHONE_NUMBER_2">請輸入有效的手機號碼</string>
   <string name="PHONE_NUMBER_3">原本帳號正在使用此手機號碼</string>
   <string name="PHONE_SIGNUP">手機註冊</string>
+  <string name="PHOTO_DELE_POP">刪除後將不可恢復，確定從相冊中刪除？</string>
+  <string name="PHOTO_DOWN_DELE">當前有文件正在下載，刪除後將不可恢復，是否刪除？</string>
+  <string name="PHOTO_NOT_LOAD">無法加載原圖</string>
   <string name="PLEASE_WAIT">請稍候&#8230;</string>
   <string name="PLEASE_WAIT_1">登錄中，請稍後&#8230;</string>
   <string name="PLEASE_WAIT_2">正在绑定，請稍候&#8230;</string>
@@ -501,6 +517,8 @@
   <string name="SAT_Hisvideo_Timeselector">週六</string>
   <string name="SAVE">儲存</string>
   <string name="SAVED_PHOTOS">已保存到相簿</string>
+  <string name="SAVE_PHONE">保存到手機</string>
+  <string name="SAVE_SUCCESS">保存成功</string>
   <string name="SCENE_ADDED">\“%s\”已新增</string>
   <string name="SCENE_ADD_ERR">\“%s\”新增失敗</string>
   <string name="SCENE_SAVED">設定成功</string>
@@ -540,6 +558,7 @@
   <string name="SETTING_FREE">自行設定單個設備的位移偵測及警示</string>
   <string name="SETTING_RECORD">錄像設置</string>
   <string name="SETTING_SD">Micro SD卡</string>
+  <string name="SETTING_SECURE_AI">AI識別</string>
   <string name="SETTING_TIMEZONE">設備時區</string>
   <string name="SET_NEW_PWD">設定新密碼</string>
   <string name="SET_PHOTO_FAIL">檔案照片設定失敗</string>
@@ -548,6 +567,7 @@
   <string name="SET_PWD">設定密碼</string>
   <string name="SHARE">親密分享</string>
   <string name="SHARE_ACCOUNT">對方帳號</string>
+  <string name="SHARE_DOWNLOAD">請先下載原圖再分享</string>
   <string name="SHARE_ERR">只能分享5位朋友</string>
   <string name="SHARE_E_MAIL">電子郵件</string>
   <string name="SHARE_FROM">來自%s的分享</string>
@@ -647,25 +667,25 @@
   <string name="Tap0_register_VerificationTips">已發送郵件到%s，請點擊郵件內的鏈接激活賬號</string>
   <string name="Tap0_wrongcode">驗證碼不正確</string>
   <string name="Tap1_AddDeviceTips">點擊右上角“+”新增設備</string>
-  <string name="Tap1_AddDevice_CameraTipShort">短按無線鍵3秒</string>
+  <string name="Tap1_AddDevice_CameraTipShort">開機後，按一下WiFi鍵</string>
   <string name="Tap1_AddDevice_CameraTips">等待藍燈閃爍</string>
   <string name="Tap1_AddDevice_CameraTipsTitle">長按無線鍵3秒</string>
   <string name="Tap1_AddDevice_CloudcameraTips">等待藍燈長亮</string>
   <string name="Tap1_AddDevice_CloudcameraTitle">開機後，長按WiFi鍵3秒</string>
-  <string name="Tap1_AddDevice_ConnectWifi">連接Wi&#8211;Fi網路</string>
+  <string name="Tap1_AddDevice_ConnectWifi">連接WiFi網路</string>
   <string name="Tap1_AddDevice_DoorbellTips">等待紅燈常亮</string>
   <string name="Tap1_AddDevice_DoorbellTipsTitle">重新開機，長按無線鍵3秒</string>
   <string name="Tap1_AddDevice_FindNoResult">没有搜尋到設備，請重試</string>
-  <string name="Tap1_AddDevice_FindingTips">正在搜尋附近設備，請開啟Wi&#8211;Fi配置模式</string>
+  <string name="Tap1_AddDevice_FindingTips">正在搜尋附近設備，請開啟WiFi配置模式</string>
   <string name="Tap1_AddDevice_QR">掃描QRCode</string>
   <string name="Tap1_AddDevice_QR_Fail">暫不支持掃描QR Code新增設備</string>
   <string name="Tap1_AddDevice_SetName">為設備取個名稱吧</string>
-  <string name="Tap1_AddDevice_TipsE">設備連接網路失敗，可能是Wi&#8211;Fi密碼輸入錯誤，請注意區分大小寫</string>
+  <string name="Tap1_AddDevice_TipsE">設備連接網路失敗，可能是WiFi密碼輸入錯誤，請注意區分大小寫</string>
   <string name="Tap1_AddDevice_ToSetting">前往設定</string>
-  <string name="Tap1_AddDevice_WifiConfTips">選擇設備要連接的Wi&#8211;Fi</string>
+  <string name="Tap1_AddDevice_WifiConfTips">選擇設備要連接的WiFi</string>
   <string name="Tap1_AddDevice_disconnected">網絡連接失敗，請重新綁定</string>
   <string name="Tap1_AddDevice_openlocationservice">請開啟位置服務</string>
-  <string name="Tap1_AddDevice_refreshWifi">未找到設備，是否刷新Wi&#8211;Fi列表？</string>
+  <string name="Tap1_AddDevice_refreshWifi">未找到設備，是否刷新WiFi列表？</string>
   <string name="Tap1_AddDevice_tips">確認退出配置設備？</string>
   <string name="Tap1_Add_Tips">點擊此處添加設備</string>
   <string name="Tap1_AddedDeviceTips">設備已設定為當前帳號</string>
@@ -677,7 +697,7 @@
   <string name="Tap1_Album_PutInVR">請將手機放入VR眼鏡</string>
   <string name="Tap1_Album_Share_Description">請輸入照片（視頻）描述&#8230;</string>
   <string name="Tap1_Album_Share_NotInstalledTips">未安裝“%s”，請安裝後重試</string>
-  <string name="Tap1_Album_Share_To_Daily_Great">分享的內容將會保存到“每日精彩”</string>
+  <string name="Tap1_Album_Share_To_Daily_Great">分享的內容將會保存到“我的 > 分享管理 > 720°全景已分享內容”</string>
   <string name="Tap1_BigPic_FavoriteTips">收藏圖片將展示在「每日精彩」</string>
   <string name="Tap1_CameraFun_Standby">待機</string>
   <string name="Tap1_CameraFun_Standby_Description">開啟待機模式，設備將進入休眠狀態，查看直播、歷史影像資料、安全防護及警報、延時攝影等功能將無法使用</string>
@@ -780,8 +800,8 @@
   <string name="Tap1_NewFirmware">新固件</string>
   <string name="Tap1_NoMessages">無消息</string>
   <string name="Tap1_Offline">設備離線，請重新配置連接>></string>
-  <string name="Tap1_OutdoorMode">直連模式</string>
-  <string name="Tap1_OutdoorMode_Opened">直連模式已開啟</string>
+  <string name="Tap1_OutdoorMode">直連</string>
+  <string name="Tap1_OutdoorMode_Opened">直連已開啟</string>
   <string name="Tap1_Refreshed">刷新成功</string>
   <string name="Tap1_RefreshedFailed">刷新失敗</string>
   <string name="Tap1_SDCardFullyTips">SD卡存儲空間已滿</string>
@@ -937,7 +957,7 @@
   <string name="Tips_Device_TimeoutRetry">連接超時，請重試</string>
   <string name="Tips_ShortVideo">長按錄製短視頻</string>
   <string name="Tips_SureDelete">是否刪除？</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
+  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
   <string name="UPDATE_DISCONNECT">設備無回應，請重試</string>
   <string name="UPDATE_FAIL">設備連接失敗，請重試</string>
   <string name="UPDATING_BUTTON">正在更新</string>
@@ -948,7 +968,7 @@
   <string name="USER_HELP">常見問題</string>
   <string name="USER_NAME">請輸入暱稱</string>
   <string name="USE_HELP">操作助理</string>
-  <string name="Unconnect_Network">您的設備未連接移動網絡，或Wi&#8211;Fi網絡</string>
+  <string name="Unconnect_Network">您的設備未連接移動網絡，或WiFi網絡</string>
   <string name="VALID_STORAGE">儲存空間</string>
   <string name="VIDEO_FirmwareUpdating">固件更新中&#8230;</string>
   <string name="VIDEO_REFRESHING">正在載入，請稍後</string>
@@ -993,8 +1013,8 @@
   <string name="WiFiLight_RedFlashing">紅色閃爍：連接中</string>
   <string name="WiFiLight_RedNBlueFlashing">紅/藍閃爍：固件升級中</string>
   <string name="WiFiLight_SteadyBlue">藍色長亮：WiFi在線</string>
-  <string name="Wifi_Hotspot">在設備的【設置>無線局域網】請選擇一個Wi&#8211;Fi熱點連接。</string>
-  <string name="Wifi_Method">Wi&#8211;Fi網絡：</string>
+  <string name="Wifi_Hotspot">在設備的【設置>無線局域網】請選擇一個WiFi熱點連接。</string>
+  <string name="Wifi_Method">WiFi網絡：</string>
   <string name="Wifi_Set_Up">立即去設置</string>
   <string name="Word_Hours">小時</string>
   <string name="XX_DISCOVERY">“%s”有新的發現</string>
@@ -1016,7 +1036,7 @@
   <string name="contacts_auth">通訊錄</string>
   <string name="copy">複製</string>
   <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
-  <string name="device_Wi_Fi">Wi&#8211;Fi</string>
+  <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s\n可能是一個電話號碼，你可以：</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
   <string name="find_new_version">發現新版本</string>
@@ -1034,7 +1054,7 @@
   <string name="not_found_the_album_application">沒有發現相簿應用程式</string>
   <string name="pb_request">正在載入</string>
   <string name="permission_auth">請在Android系統設定中開啟“%s”許可權，以方便您的正常使用</string>
-  <string name="photo">相簿</string>
+  <string name="photo">相冊</string>
   <string name="please_choose_wifi">請選擇WiFi網路</string>
   <string name="receive_new_news">收到%s條新訊息</string>
   <string name="rename">編輯名稱</string>
