--- a/app/src/_doby/res/values-zh-rTW/strings.xml
+++ b/app/src/_doby/res/values-zh-rTW/strings.xml
@@ -3,7 +3,7 @@
 <resources>
   <string name="Slogan">美好生活 智能家居</string>
   <string name="Tap1_Shared_Description">我用720°全景攝像機拍攝了一段內容，快來看看吧</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
+  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
   <string name="app_name">DobyNew</string>
   <string name="help_url">https://%1$s:8081/helps/en%2$s.html</string>
 </resources>
