--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -18,6 +18,10 @@
   <string name="ADD_SHARE">Teilen hinzufügen</string>
   <string name="ADD_SUCC_1">Erfolgreich hinzugefügt</string>
   <string name="AGREE">Ich akzeptiere</string>
+  <string name="AI_CAT">Katze</string>
+  <string name="AI_DOG">Hund</string>
+  <string name="AI_HUMAN">Menschlich</string>
+  <string name="AI_VEHICLE">Fahrzeug</string>
   <string name="ALARM">Alarms</string>
   <string name="ALERTS">Alarms</string>
   <string name="ALIAS">Benutzername</string>
@@ -93,6 +97,7 @@
   <string name="ClearingTips">Clearing&#8230;</string>
   <string name="Cloud_Camera">Cloud&#8211;Kamera</string>
   <string name="Consumer_Camera">Consumer Camera</string>
+  <string name="DATA_FLOW_PHOTO">Datenverbrauch würde erstellt, wenn das Originalfoto ohne WIFI&#8211;Verbindung angezeigt wird, weiter?</string>
   <string name="DEAL_FEEDBACK">Vielen Dank für Ihr Feedback</string>
   <string name="DELETE">Löschen</string>
   <string name="DELETED">Alles bereits gelöscht</string>
@@ -103,6 +108,7 @@
   <string name="DELETE_SURE">Möchten Sie es löschen?</string>
   <string name="DELETE_THEME">Löschen</string>
   <string name="DELETE_THEME_XX">Sind Sie sicher, den Ort %s zu löschen?</string>
+  <string name="DETECTED_AI">Erkannt</string>
   <string name="DEVICE">Gerät</string>
   <string name="DEVICES_TIPS_TEXT">Schritte:\n1. Gerät mit Internet verbunden \n2. registrieren und CID aktivieren \n3. mit aktuellem Account verbinden</string>
   <string name="DEVICES_TITLE">Geräte hinzufügen</string>
@@ -118,6 +124,13 @@
   <string name="DEVICE_CONNECTING">Das Gerät mit dem Netzwerk verbunden ist</string>
   <string name="DEVICE_EXISTED">Ihr Gerät ist verbunden, bitte nicht wiederholen</string>
   <string name="DEVICE_NO_RES">In komplette \n Zum Gerätestatus anzeigen Liste</string>
+  <string name="DEVICE_OFFLINE1">Überprüfen Sie, ob das Gerät eingeschaltet ist</string>
+  <string name="DEVICE_OFFLINE2">Gerät Stromversorgung LED ist immer nach dem Booten. Wenn die LED nicht leuchtet, drücken Sie bitte den Netzschalter, bis das blaue Licht aufleuchtet.</string>
+  <string name="DEVICE_OFFLINE3">Bitte überprüfen Sie das umgebende Netzwerk</string>
+  <string name="DEVICE_OFFLINE4">Verfügbar WiFi</string>
+  <string name="DEVICE_OFFLINE5">Bitte konfiguriere WiFi für das Gerät</string>
+  <string name="DEVICE_OFFLINE6">Kein WiFi verfügbar</string>
+  <string name="DEVICE_OFFLINE7">Bitte schließen Sie die Hotspots an</string>
   <string name="DEVICE_UPGRADE">Software&#8211;Upgrade</string>
   <string name="DEVICE_UPGRADE_TIPS">Das Gerät benötigt werden Rebound&#8211;Software zu aktualisieren.</string>
   <string name="DEVICE_WIFI_ONLINE">Online via WiFi</string>
@@ -396,6 +409,9 @@
   <string name="PHONE_NUMBER_2">Bitte gültigen Handynummer eingeben</string>
   <string name="PHONE_NUMBER_3">Diese Handynummer von einem anderen Account besetzt</string>
   <string name="PHONE_SIGNUP">Telefon</string>
+  <string name="PHOTO_DELE_POP">Beyond Retrieve nach dem Löschen, sicher aus dem fotos zu löschen?</string>
+  <string name="PHOTO_DOWN_DELE">Die aktuelle Datei wird heruntergeladen, und es wird nicht nach dem Löschen gestellt werden, löschen?</string>
+  <string name="PHOTO_NOT_LOAD">Kann kein Originalfoto laden</string>
   <string name="PLEASE_WAIT">Einen Moment bitte&#8230;</string>
   <string name="PLEASE_WAIT_1">Einen Moment bitte&#8230;</string>
   <string name="PLEASE_WAIT_2">Hinzugefügt, bitte warten&#8230;</string>
@@ -501,6 +517,8 @@
   <string name="SAT_Hisvideo_Timeselector">Sa</string>
   <string name="SAVE">Fertig</string>
   <string name="SAVED_PHOTOS">Im Archiv gespeichert</string>
+  <string name="SAVE_PHONE">Sparen Sie am Telefon</string>
+  <string name="SAVE_SUCCESS">Erfolgreich gespeichert</string>
   <string name="SCENE_ADDED">\"%s\" hinzugefügt</string>
   <string name="SCENE_ADD_ERR">\"%s\" fehlgeschlagen hinzugefügt</string>
   <string name="SCENE_SAVED">Erfolgreich eingestellt</string>
@@ -540,6 +558,7 @@
   <string name="SETTING_FREE">Bewegungserkennung und Alarm vom Einzelgerät einstellen</string>
   <string name="SETTING_RECORD">Video&#8211;Einstellungen</string>
   <string name="SETTING_SD">Micro SD&#8211;Karte</string>
+  <string name="SETTING_SECURE_AI">AI Anerkennung</string>
   <string name="SETTING_TIMEZONE">Zeitzone einstellen</string>
   <string name="SET_NEW_PWD">Neues Passwort erstellen</string>
   <string name="SET_PHOTO_FAIL">Photo fehlgeschlagen eingestellt</string>
@@ -548,6 +567,7 @@
   <string name="SET_PWD">Passwort erstellen</string>
   <string name="SHARE">Teilen</string>
   <string name="SHARE_ACCOUNT">Partneraccount</string>
+  <string name="SHARE_DOWNLOAD">Bitte laden Sie das Originalfoto herunter und teilen Sie es</string>
   <string name="SHARE_ERR">Nur an fünf Freunde teilen</string>
   <string name="SHARE_E_MAIL">E&#8211;mail</string>
   <string name="SHARE_FROM">Teilen von %s</string>
@@ -647,7 +667,7 @@
   <string name="Tap0_register_VerificationTips">Die Aktivierungs Email wurde an %s gesendet, bitte klicken Sie auf den Link, um Ihr Konto zu aktivieren.</string>
   <string name="Tap0_wrongcode">Verifizierungscode falsch</string>
   <string name="Tap1_AddDeviceTips">Klicken Sie das\"+\"oben rechts um Gerät hinzuzufügen</string>
-  <string name="Tap1_AddDevice_CameraTipShort">Drücken Sie kurz die WiFi&#8211;Taste für 3s</string>
+  <string name="Tap1_AddDevice_CameraTipShort">Drücken Sie nach dem Einschalten die WiFi&#8211;Taste</string>
   <string name="Tap1_AddDevice_CameraTips">Warten, bis der Indikator in blau zu flackern</string>
   <string name="Tap1_AddDevice_CameraTipsTitle">Drücken Sie lange die WiFi&#8211;Taste für 3s</string>
   <string name="Tap1_AddDevice_CloudcameraTips">Warten Sie, bis die Anzeige blau leuchtet</string>
@@ -677,7 +697,7 @@
   <string name="Tap1_Album_PutInVR">Setzen Sie Handy in VR Gläser</string>
   <string name="Tap1_Album_Share_Description">Beschreibung hinzufügen</string>
   <string name="Tap1_Album_Share_NotInstalledTips">\"%s\" nicht installiert, bitte installieren Sie es und versuchen Sie es erneut</string>
-  <string name="Tap1_Album_Share_To_Daily_Great">Die freigegebenen Inhalte werden gespeichert auf\"Tageshighlight\"</string>
+  <string name="Tap1_Album_Share_To_Daily_Great">Die freigegebenen Inhalte werden gespeichert auf\"Mich > Teilen Management > 720°Cam Geteilte Inhalt \"</string>
   <string name="Tap1_BigPic_FavoriteTips">Die Bilder werden in\"Täglich Groß\"gezeigt</string>
   <string name="Tap1_CameraFun_Standby">Standby</string>
   <string name="Tap1_CameraFun_Standby_Description">Wenn Standby eingeschaltet wird, geht das Gerät in Ruhestand, wobei die Funktionen wie Liveschauen, Videohistorie, Sicherheitsschutz und Alarm, automatische Videoaufnahme, Zeitrafferaufnahme nicht funktionieren können.</string>
@@ -937,7 +957,7 @@
   <string name="Tips_Device_TimeoutRetry">Timeout, versuchen Sie es erneut</string>
   <string name="Tips_ShortVideo">Lange drückt ein kurzes Video aufnehmen</string>
   <string name="Tips_SureDelete">Sicher löschen?</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
+  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
   <string name="UPDATE_DISCONNECT">Ausrüstung keine Antwort, versuchen Sie es erneut</string>
   <string name="UPDATE_FAIL">Geräteverbindung fehlgeschlagen ist, versuchen Sie es erneut</string>
   <string name="UPDATING_BUTTON">Update läuft</string>
@@ -948,7 +968,7 @@
   <string name="USER_HELP">Bedingungshilfen</string>
   <string name="USER_NAME">Benutzernamen bitte eingeben</string>
   <string name="USE_HELP">Verwenden der Hilfe</string>
-  <string name="Unconnect_Network">Ihr Gerät ist nicht mit einem Mobilfunknetz oder einem Wi&#8211;Fi&#8211;Netzwerk verbunden</string>
+  <string name="Unconnect_Network">Ihr Gerät ist nicht mit einem Mobilfunknetz oder einem WiFi&#8211;Netzwerk verbunden</string>
   <string name="VALID_STORAGE">Speicher</string>
   <string name="VIDEO_FirmwareUpdating">Firmware Updating&#8230;</string>
   <string name="VIDEO_REFRESHING">Wird geladen, einen Moment bitte</string>
@@ -974,7 +994,7 @@
   <string name="WIFI_HINT_LAGEL_0">WiFi&#8211;Anzeiger</string>
   <string name="WIFI_HINT_LAGEL_1">3G/4G&#8211;Anzeiger</string>
   <string name="WIFI_HINT_LAGEL_2">Power&#8211;Anzeiger</string>
-  <string name="WIFI_NAME">Wi&#8211;Fi:</string>
+  <string name="WIFI_NAME">WiFi:</string>
   <string name="WIFI_OFF">WiFi auf Ihrem Handy nicht eingeschaltet, bitte anmachen und erneut probieren</string>
   <string name="WIFI_PWD">WiFi&#8211;Passwort</string>
   <string name="WIFI_PWD_1">Passwort:</string>
@@ -993,8 +1013,8 @@
   <string name="WiFiLight_RedFlashing">Rot blinkend: Anschluss</string>
   <string name="WiFiLight_RedNBlueFlashing">Red &amp; Blue blinkend: Aktualisierung</string>
   <string name="WiFiLight_SteadyBlue">Steady blue: WiFi online</string>
-  <string name="Wifi_Hotspot">Im Gerät [Einstellungen> Wireless LAN], Bitte wählen Sie einen Wi&#8211;Fi&#8211;Hotspot zum Verbinden.</string>
-  <string name="Wifi_Method">Wi&#8211;Fi Netzwerk:</string>
+  <string name="Wifi_Hotspot">Im Gerät [Einstellungen> Wireless LAN], Bitte wählen Sie einen WiFi&#8211;Hotspot zum Verbinden.</string>
+  <string name="Wifi_Method">WiFi Netzwerk:</string>
   <string name="Wifi_Set_Up">Gehen Sie zum Einrichten</string>
   <string name="Word_Hours">Stunde</string>
   <string name="XX_DISCOVERY">\"%s\" Gegenstand bewegt sich</string>
@@ -1016,7 +1036,7 @@
   <string name="contacts_auth">Kontakte</string>
   <string name="copy">Kopieren</string>
   <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
-  <string name="device_Wi_Fi">Wi&#8211;Fi</string>
+  <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s\nIst wahrscheinlich eine Telefonnummer, Sie können:</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
   <string name="find_new_version">Entdeckung neuer Version</string>
@@ -1034,7 +1054,7 @@
   <string name="not_found_the_album_application">Foto&#8211;App nicht gefunden</string>
   <string name="pb_request">Wird geladen</string>
   <string name="permission_auth">Bitte auf \"%s\" die Erlaubnis schalten in den Android&#8211;System&#8211;Einstellungen, so dass Sie die normale Benutzung</string>
-  <string name="photo">Foto</string>
+  <string name="photo">Fotos</string>
   <string name="please_choose_wifi">Bitte wählen Sie den Namen des zu WIFI angeschlossene Gerät!</string>
   <string name="receive_new_news">Hat %s neue Nachricht</string>
   <string name="rename">Name des Geräts</string>
